# sandbox-shell-mcp

./: Cargo.toml  README.md  deploy.sh
src/: main.rs
