[package]
name = "sandbox-shell-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
portable-pty = "0.8"
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
